--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 Django==5.1
+django-environ==0.11.2
+django-filter==24.3
+django-redis==5.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 idna==3.8
@@ -17,6 +20,7 @@ prompt_toolkit==3.0.47
 psycopg2-binary==2.9.9
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
+redis==5.0.8
 requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
